# FinFlow

./: .gitignore  DATABASE_FIX_SUMMARY.md  api.http  docker-compose.yml  makefile
.github/: README.md  WORKFLOWS_SUMMARY.md  dependabot.yml
account_service/: Dockerfile  README.md  alembic.ini  api.http  requirements.txt  startup.sh
category_service/: api.http  dockerfile  pyproject.toml  requirements.txt  startup.sh
category_service/alembic/: env.py
category_service/alembic/versions/: 0bee7b6ed2f5_initial_migration.py  1cd77d51bce1_add_composite_index_user_id_name.py  2619ac6d288b_add_composite_index_user_id_parent_id.py  a3d3777b68f1_initial_migration.py  b61576c61737_add_type_to_categories.py  c1b8c777025f_initial_migration.py  c6d7e35a6e52_add_parent_id_to_categories_and_remove_.py  e138e7a86b02_add_composite_index_user_id_type.py
category_service/app/: config.py  database.py  dependencies.py  exception_handlers.py  main.py
category_service/app/exceptions/: __init__.py  category_exceptions.py
category_service/app/models/: category.py
category_service/app/routers/: category.py  internal.py
category_service/app/schemas/: category.py
category_service/app/serializers/: __init__.py  category_serializer.py  validation_mixins.py
category_service/app/services/: category.py
category_service/app/tests/: test_improved_functionality.py
category_service/app/tests/test_caregory/: test_create.py  test_delete.py  test_get_all_categories.py  test_get_category_by_id.py  test_update.py
category_service/app/tests/test_serializers/: __init__.py  test_category_serializer.py
category_service/app/utils/: logger.py
category_service/migrations/: add_category_type.py
currency_service/: Dockerfile  requirements.txt
debt_service/: README.md  alembic.ini  dockerfile  pyproject.toml  requirements.txt  startup.sh
debt_service/alembic/: env.py
debt_service/alembic/versions/: 8dfb3b1b990d_make_category_id_nullable.py
debt_service/app/: __init__.py  config.py  database.py  dependencies.py  main.py
debt_service/app/exceptions/: __init__.py  debt_exceptions.py
debt_service/app/models/: debt.py
debt_service/app/routers/: contact.py  dept_route.py
debt_service/app/schemas/: contact.py  debt.py
debt_service/app/services/: contact.py  debt.py
debt_service/app/utils/: logger.py
deploy/: Caddyfile  docker-compose.yml
e2e_ui_tests/: global-setup.ts  (+3 more)
recurring_service/: Dockerfile  README.md  alembic.ini  api.http  pyproject.toml  pytest.ini  requirements.txt  startup.sh
recurring_service/alembic/: env.py
recurring_service/alembic/versions/: 001_initial_migration.py
recurring_service/app/: __init__.py  config.py  database.py  dependencies.py  exception_handlers.py  main.py
recurring_service/app/clients/: __init__.py  base.py  category_client.py  expense_client.py  income_client.py
recurring_service/app/exceptions/: __init__.py  recurring_exceptions.py
recurring_service/app/models/: __init__.py  payment_schedule.py  recurring_payment.py
recurring_service/app/routers/: __init__.py  internal.py  recurring.py
recurring_service/app/schemas/: __init__.py  payment_schedule.py  recurring_payment.py
recurring_service/app/services/: __init__.py  executor.py  payment_calculator.py  recurring_payment_service.py  scheduler_service.py
recurring_service/app/utils/: logger.py
(+439 files in other folders)
